--- a/Ableism/Base.lproj/Main.storyboard
+++ b/Ableism/Base.lproj/Main.storyboard
@@ -21,33 +21,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="u8Y-SO-2aQ">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Tlr-a3-f2M">
+                                <rect key="frame" x="0.0" y="154" width="375" height="513"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="To add location, place finger down on map." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hg-He-IUS">
+                                <rect key="frame" x="16" y="58" width="343" height="88"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zHJ-Bm-log">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </stackView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Or Search Loction" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3b-P9-RMh">
-                                <rect key="frame" x="82" y="28" width="277" height="30"/>
+                                <rect key="frame" x="16" y="20" width="343" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AKw-Bg-LPu">
-                                <rect key="frame" x="16" y="28" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="NEW">
-                                    <color key="titleColor" red="0.051375895230000003" green="0.63483441870000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Tlr-a3-f2M">
-                                <rect key="frame" x="0.0" y="66" width="375" height="601"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="u8Y-SO-2aQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6Ud-jA-kKN"/>
-                            <constraint firstAttribute="trailing" secondItem="u8Y-SO-2aQ" secondAttribute="trailing" id="7ib-bi-Cdc"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="u8Y-SO-2aQ" secondAttribute="bottom" id="Ktv-GN-ENS"/>
-                            <constraint firstItem="u8Y-SO-2aQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="u3b-2T-sLE"/>
+                            <constraint firstItem="zHJ-Bm-log" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NOh-s1-oqG"/>
+                            <constraint firstAttribute="trailing" secondItem="zHJ-Bm-log" secondAttribute="trailing" id="kf9-xO-86y"/>
+                            <constraint firstItem="zHJ-Bm-log" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="p5H-pB-o4L"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zHJ-Bm-log" secondAttribute="bottom" id="xTF-AY-Tfz"/>
                         </constraints>
                     </view>
                     <connections>
