--- a/Ableism/Base.lproj/Main.storyboard
+++ b/Ableism/Base.lproj/Main.storyboard
@@ -56,23 +56,33 @@
             <point key="canvasLocation" x="-817" y="5"/>
         </scene>
         <!--Local Users-->
-        <scene sceneID="6IS-La-xQI">
+        <scene sceneID="ob8-yO-7M7">
             <objects>
-                <viewController id="0he-gK-ErM" customClass="LocalUsersViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="AJV-dx-WkE"/>
-                        <viewControllerLayoutGuide type="bottom" id="ogb-XU-Mv4"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="YLh-V6-Boe">
+                <tableViewController id="77M-jx-RPw" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="im6-NE-2hp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Local Users" image="user.png" id="eYI-od-mkc"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fu9-2V-fyS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="j4y-Dt-Rsv">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j4y-Dt-Rsv" id="SiH-MV-mgi">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="77M-jx-RPw" id="I91-Jg-fIb"/>
+                            <outlet property="delegate" destination="77M-jx-RPw" id="bIY-8z-A0Z"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Local Users" image="user.png" id="aoQ-BO-rqB"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gBT-mK-H7b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9" y="-188"/>
+            <point key="canvasLocation" x="9" y="-220"/>
         </scene>
         <!--Find-->
         <scene sceneID="hG9-mF-jXV">
@@ -120,7 +130,7 @@
                     <connections>
                         <segue destination="bLD-LW-W9u" kind="relationship" relationship="viewControllers" id="z9n-4K-5Aj"/>
                         <segue destination="HOv-HR-Coo" kind="relationship" relationship="viewControllers" id="GXC-oh-CPd"/>
-                        <segue destination="0he-gK-ErM" kind="relationship" relationship="viewControllers" id="Br4-zQ-Wiq"/>
+                        <segue destination="77M-jx-RPw" kind="relationship" relationship="viewControllers" id="hHB-r2-Hga"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nLc-aO-hHf" userLabel="First Responder" sceneMemberID="firstResponder"/>
